[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Player/Player-placeholder.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Player/Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0944

[sub_resource type="CircleShape2D" id=2]
radius = 19.9458

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -14 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Gun_pos" type="Position2D" parent="."]
position = Vector2( 0, -45 )

[node name="Shoot_timer" type="Timer" parent="."]
one_shot = true

[node name="Reload_timer" type="Timer" parent="."]

[connection signal="timeout" from="Shoot_timer" to="." method="_on_Shoot_timer_timeout"]
